name:                haskellAsteroids
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/giantpinkwalrus/haskellAsteroids#readme
license:             BSD3
license-file:        LICENSE
author:              Sampo Lamminsalo
maintainer:          sampolammas@gmail.com
copyright:           2017 Sampo Lamminsalo
category:            Games
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable haskellAsteroids
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , gloss >= 1.10.2.5
                     , data-accessor >= 0.2.2.7
  default-language:    Haskell2010

test-suite haskellAsteroids-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskellAsteroids
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskellAsteroids
